<resources>
    <string name="app_name">Planning Poker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Login</string>
    <string name="forgot_password">forgot password?</string>
    <string name="planning_poker"><b>Planning poker</b></string>
    <string name = "deck">Deck</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="create_room">Create Room</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">email</string>
    <string name="password_login">password</string>
    <string name="create_room_2">Create Room</string>
    <string name="join_room">Join Room</string>

</resources>