<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Views.Fragments.JoinLobbyFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent">


            <EditText
                android:id="@+id/edit_name_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:ems="10"
                android:textColor="@color/ChineseViolet"
                android:textColorHint="@color/Lavender2"
                android:hint="@string/name"
                android:textSize="25dp"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_password_join"
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:textColorHint="@color/Lavender2"
                android:hint="@string/password"
                android:textColor="@color/ChineseViolet"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_name_join" />

            <Button
                android:id="@+id/button_join_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/join_room"
                android:backgroundTint="@color/UnbleachedSilk"
                android:textColor="@color/ChineseViolet"
                app:layout_constraintEnd_toEndOf="@+id/edit_password_join"
                app:layout_constraintStart_toStartOf="@+id/edit_password_join"
                app:layout_constraintTop_toBottomOf="@+id/edit_password_join" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>