<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Views.Fragments.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        android:id="@+id/log_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:backgroundTint="@color/BabyLavander"
        android:padding="15dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="50dp"
            android:text="@string/sign_up"
            android:textColor="@color/ChineseViolet"
            android:textSize="50dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/MistyRoses"
            android:padding="10dp"

            app:layout_constraintEnd_toEndOf="@+id/email_holder"
            app:layout_constraintStart_toStartOf="@+id/email_holder"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/MistyRoses"
                android:backgroundTint="@color/MistyRoses"
                android:hint="@string/name"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_holder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:background="@color/MistyRoses"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_holder">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/MistyRoses"
                android:hint="@string/email" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/MistyRoses"
            android:padding="10dp"

            app:layout_constraintEnd_toEndOf="@+id/email_holder"
            app:layout_constraintStart_toStartOf="@+id/email_holder"
            app:layout_constraintTop_toBottomOf="@+id/email_holder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/MistyRoses"
                android:backgroundTint="@color/MistyRoses"
                android:hint="@string/password_login"
                android:password="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/log_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:backgroundTint="@color/UnbleachedSilk"
            android:text="@string/sign_up"
            android:textColor="@color/ChineseViolet"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_holder"


            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>